# pyqt_client_websocket_chat

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
ui/: chat.ui
