[tool.poetry]
name = "pyqtmy"
version = "0.1.0"
description = ""
authors = ["Tati Trif <tatitrif@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyinstaller = "^6.12.0"
pyqt6 = "^6.9.0"
requests = "^2.32.3"
websockets = "^15.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
